# ecoscope

./: .gitignore  Makefile  environment.yml  jz_changes.md  pyproject.toml  ruff.toml  setup.cfg  setup.py
.github/workflows/: main.yml
doc/source/: conf.py
ecoscope/: __init__.py
ecoscope/analysis/: astronomy.py  ecograph.py  geofence.py  immobility.py  percentile.py  proximity.py  seasons.py  speed.py
ecoscope/analysis/UD/: etd_range.py
ecoscope/base/: __init__.py  _dataclasses.py  base.py  utils.py
ecoscope/contrib/: __init__.py  basemaps.py  foliumap.py
ecoscope/io/: earthranger.py  eetools.py  raster.py  utils.py
ecoscope/mapping/: map.py
ecoscope/plotting/: plot.py
tests/: conftest.py  test_ecodataframe.py  test_ecograph.py  test_geofence.py  test_png.py  test_ud.py
